# distributed-computing

./: .gitignore  CMakeLists.txt  README.md  ThreadPool.cpp  ThreadPool.h  main.cpp
inc/ThreadPool/: SafeQueue.h  TaskInfo.h  ThreadPool.h
src/ThreadPool/: ThreadPool.cpp
